fixed spacing on expense & incomes page, fixed spacing on homepage, fixed navbar, pushed logo to the left, make border around buttons dissapear

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,7 @@
   height: 80vh !important;
 }
 
-/*.button {
+.button {
   background-color: #2dd577 !important;
   color: white !important;
   border: 0 !important;
@@ -13,4 +13,4 @@
 .background-color-green {
   background-color: #2dd577 !important;
   border: none !important;
-}*/
+}
