--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -9,7 +9,9 @@
 }
 .logo {
   width: 10rem;
-  margin-right: 400px;
+  margin-right: 800px;
+  position: relative;
+  z-index: 999;
 }
 
 .login_register {
