--- a/frontend/src/components/expense.css
+++ b/frontend/src/components/expense.css
@@ -10,15 +10,9 @@
 
 .submit-button-container .col-sm-5 {
   margin-top: 38px;
-  display: flex;
-  justify-content: center;
-}
-
-.submit-button-container {
-  display: flex;
-  justify-content: center;
 }
 
 .count {
   color: white;
 }
+
